# deepiri-logger

./: .gitignore  COMPLETION_CHECKLIST.md  README.md  ROLLOUT.md  TESTING.md
.github/codeql/: README.md  codeql-config.yml
.github/workflows/: ci.yml  codeql.yml
bash/: README.md  logger.sh
cplusplus/: README.md  logger.cpp
nodejs/: package-lock.json  package.json  publish.sh  tsconfig.json
nodejs/src/: example.ts  format_and_print.ts  formatters.ts  index.ts  middleware.ts
python/: build.sh  example_app.py  pyproject.toml  test_import.py
python/deepiri_logger/: __init__.py  config.py  processors.py
ruby/: README.md  logger.rb
rust/: Cargo.toml  publish.sh
rust/src/: lib.rs
scripts/: add_submodule.sh  validate_parity.py
shared/: pii-patterns.yml  schema.json
