[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "deepiri-logger"
version = "0.1.0"
description = "Deepiri unified logger for Python services"
readme = "../README.md"
license = { text = "Apache-2.0" }
authors = [
  { name = "Team Deepiri", email = "team@deepiri.ai" }
]
requires-python = ">=3.10"
dependencies = [
  "structlog>=24.1.0"
]
keywords = ["logging", "structured-logging", "pii-masking", "observability"]

[tool.setuptools.packages.find]
where = ["."]
include = ["deepiri_logger*"]
