[package]
name = "deepiri_logger_rs"
version = "0.1.0"
edition = "2021"
description = "Deepiri unified logger for Rust services"
license = "MIT"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "json"] }
